chore: add important functionalities

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL='sqlite:db.sqlite'
+SQLITE_DB_URL='sqlite:./database.db'
+JWT_SECRET='the quick brown fox jumped over a lazy black dog.'
