--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ base64 = "0.22.1"
 sysinfo = "0.31"
 mime_guess = "2.0"
 actix-files = "0.6"
+anyhow = "1.0.87"
 
 [dependencies.chrono]
 version = "0.4.26"
